--- a/public/game.html
+++ b/public/game.html
@@ -139,6 +139,9 @@ body {
 		<script>
 			const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"ashes-of-eirion","experimentalVK":false,"fileSizes":{"ashes-of-eirion.pck":1547408,"ashes-of-eirion.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 			const engine = new Engine(GODOT_CONFIG);
+			const token = sessionStorage.getItem('supabase_access_token');
+			console.log(token ? "[WebBridge] Token found in sessionStorage" : "[WebBridge] No token found in sessionStorage");
+			window.supabase_token = token || null;
 
 			(function () {
 				const INDETERMINATE_STATUS_STEP_MS = 100;
