--- a/public/game.html
+++ b/public/game.html
@@ -139,7 +139,7 @@ body {
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"ashes-of-eirion","experimentalVK":false,"fileSizes":{"ashes-of-eirion.pck":1666320,"ashes-of-eirion.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
-window.number = "123";
+window.number = sessionStorage.getItem('supabase_access_token');
 
 (function () {
 	const INDETERMINATE_STATUS_STEP_MS = 100;
