--- a/public/game.html
+++ b/public/game.html
@@ -246,7 +246,7 @@ window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsIn
 	}
 }());
 	function fetchDataFromAPI() {
-		console.log('Fetching data from API:', url);
+		console.log('Fetching data from API');
 		fetch('https://peupxardkrcgosdfhzfw.supabase.co/rest/v1/players?id=eq.%s', {
 		headers: {
 			Authorization: 'Bearer %s',
