tambah global fetch

--- a/public/game.html
+++ b/public/game.html
@@ -142,7 +142,7 @@ const engine = new Engine(GODOT_CONFIG);
 window.token = sessionStorage.getItem('supabase_access_token');
 window.user_id = sessionStorage.getItem('supabase_user_id');
 window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBldXB4YXJka3JjZ29zZGZoemZ3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE2OTk1NjMsImV4cCI6MjA2NzI3NTU2M30.sAv9ouFlirdNZ--M_NBYap51pcGGpXToW2JQ8DqmQVQ';
-
+window.fetchDataFromAPI = fetchDataFromAPI;
 
 (function () {
 	const INDETERMINATE_STATUS_STEP_MS = 100;
