--- a/public/game.html
+++ b/public/game.html
@@ -261,11 +261,11 @@ window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsIn
 					})
 					.then(data => {
 						// Send data back to Godot
-						engine.call('world', 'receive_data', JSON.stringify(data));
+						GodotRuntime.call('world', 'receive_data', JSON.stringify(data));  // ✅ FIXED
 					})
 					.catch(error => {
 						console.error('Error fetching data:', error);
-						engine.call('world', 'handle_error', error.message);
+						GodotRuntime.call('world', 'handle_error', error.message);  
 					});
 			};
 		}, displayFailureNotice);
