--- a/public/game.html
+++ b/public/game.html
@@ -139,6 +139,9 @@ body {
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"ashes-of-eirion","experimentalVK":false,"fileSizes":{"ashes-of-eirion.pck":1720688,"ashes-of-eirion.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
+window.token = sessionStorage.getItem('supabase_access_token');
+window.user_id = sessionStorage.getItem('supabase_user_id');
+window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBldXB4YXJka3JjZ29zZGZoemZ3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE2OTk1NjMsImV4cCI6MjA2NzI3NTU2M30.sAv9ouFlirdNZ--M_NBYap51pcGGpXToW2JQ8DqmQVQ';
 
 (function () {
 	const INDETERMINATE_STATUS_STEP_MS = 100;
@@ -238,17 +241,17 @@ const engine = new Engine(GODOT_CONFIG);
 				}
 			},
 		}).then((instance) => {
-			window.godotInstance = instance; 
-			if (instance) {
-				window.GodotRuntime = instance;
-			} else {
-				throw new Error('Godot instance is null');
-			}
+			if (!instance) throw new Error('Godot instance is null');
+
+			window.godotInstance = instance;
+			window.GodotRuntime = instance; // Optional alias
+
 			setStatusMode('hidden');
 			initializing = false;
 
+			// ✅ Define function after Godot is ready
 			window.fetchDataFromAPI = function () {
-				console.log('Fetching data from API');
+				console.log('📡 Fetching data from API');
 
 				const url = `https://peupxardkrcgosdfhzfw.supabase.co/rest/v1/players?id=eq.${window.user_id}`;
 				const headers = {
@@ -263,14 +266,14 @@ const engine = new Engine(GODOT_CONFIG);
 						return response.json();
 					})
 					.then(data => {
-						// Send data back to Godot
-						window.godotInstance.call('world', 'receive_data', JSON.stringify(data));  // ✅ FIXED
+						window.godotInstance.call('world', 'receive_data', JSON.stringify(data));
 					})
 					.catch(error => {
-						console.error('Error fetching data:', error);
+						console.error('❌ Error fetching data:', error);
 						window.godotInstance.call('world', 'handle_error', error.message);
 					});
 			};
+
 		}, displayFailureNotice);
 	}
 }());
