--- a/public/game.html
+++ b/public/game.html
@@ -275,6 +275,7 @@ window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsIn
 					});
 			};
 
+			window.fetchDataFromAPI();
 		}, displayFailureNotice);
 	}
 }());
