--- a/public/game.html
+++ b/public/game.html
@@ -225,44 +225,21 @@ window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsIn
 		displayFailureNotice(missingMsg + missing.join('\n'));
 	} else {
 		setStatusMode('indeterminate');
-		var godotInstance = engine.startGame({
-			'onReady': function () {
-				console.log("✅ Godot engine ready!");
-				setStatusMode('hidden');
-				initializing = false;
-				window.godotInstance = engine; // ← Ini penting!
-				console.log("🧠 window.godotInstance sekarang:", window.godotInstance);
-				if (window.token && window.user_id) {
-					console.log("Token & User ID ditemukan, mengirim data ke Godot...");
-					fetchDataFromAPI();
-				} else {
-					console.warn("⚠️ Token atau User ID tidak ditemukan.");
-				}
-			},
-			'onError': function (err) {
-				displayFailureNotice('❌ Error: ' + err.message);
-			},
-			'onProgress': function (current, total) {
-				if (total > 0) {
-					statusProgressInner.style.width = `${(current / total) * 100}%`;
-					setStatusMode('progress');
-					if (current === total) {
-						// wait for progress bar animation
-						setTimeout(() => {
-							setStatusMode('indeterminate');
-						}, 500);
-					}
-				} else {
-					setStatusMode('indeterminate');
-				}
-			},
-		});
-		if (!godotInstance) {
-			const missingMsg = 'Error\nGodot engine failed to start.\n';
-			displayFailureNotice(missingMsg + 'Please check your browser console for more details.');
+		engine.startGame().then(function(godotInstance) {
+			console.log("✅ Godot engine ready!");
+			setStatusMode('hidden');
 			initializing = false;
-			return;
-		}
+			window.godotInstance = godotInstance; // ← Ini yang benar!
+			console.log("🧠 window.godotInstance sekarang:", window.godotInstance);
+			if (window.token && window.user_id) {
+				console.log("Token & User ID ditemukan, mengirim data ke Godot...");
+				fetchDataFromAPI();
+			} else {
+				console.warn("⚠️ Token atau User ID tidak ditemukan.");
+			}
+		}).catch(function(err) {
+			displayFailureNotice('❌ Error: ' + err.message);
+		});
 	}
 }());
 	function fetchDataFromAPI() {
