--- a/public/game.html
+++ b/public/game.html
@@ -224,19 +224,32 @@ window.apikey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsIn
 		const missingMsg = 'Error\nThe following features required to run Godot projects on the Web are missing:\n';
 		displayFailureNotice(missingMsg + missing.join('\n'));
 	} else {
-				setStatusMode('indeterminate');
+		setStatusMode('indeterminate');
 		engine.startGame().then(function() {
 			console.log("✅ Godot engine ready!");
 			setStatusMode('hidden');
 			initializing = false;
-			window.godotInstance = engine.instance; // ← Ini yang benar!
-			console.log("🧠 window.godotInstance sekarang:", window.godotInstance);
-			if (window.token && window.user_id) {
-				console.log("Token & User ID ditemukan, mengirim data ke Godot...");
-				fetchDataFromAPI();
-			} else {
-				console.warn("⚠️ Token atau User ID tidak ditemukan.");
+
+    		// Tunggu sampai engine.instance benar-benar terisi
+    		function waitForGodotInstance(retry = 20) {
+				if (engine.instance) {
+					window.godotInstance = engine.instance;
+					console.log("🧠 window.godotInstance sekarang:", window.godotInstance);
+					if (window.token && window.user_id) {
+						console.log("Token & User ID ditemukan, mengirim data ke Godot...");
+						fetchDataFromAPI();
+					} else {
+						console.warn("⚠️ Token atau User ID tidak ditemukan.");
+					}
+				} else if (retry > 0) {
+					console.warn("⚠️ godotInstance masih undefined, mencoba lagi...");
+					// Tunggu 100ms sebelum mencoba lagi
+					setTimeout(() => waitForGodotInstance(retry - 1), 100);
+				} else {
+					console.error("❌ godotInstance tetap undefined setelah menunggu.");
+				}
 			}
+			waitForGodotInstance();
 		}).catch(function(err) {
 			displayFailureNotice('❌ Error: ' + err.message);
 		});
