--- a/public/game.html
+++ b/public/game.html
@@ -139,6 +139,7 @@ body {
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"ashes-of-eirion","experimentalVK":false,"fileSizes":{"ashes-of-eirion.pck":1841024,"ashes-of-eirion.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
+window.godotInstance = engine;
 window.token = sessionStorage.getItem('supabase_access_token');
 window.user_id = sessionStorage.getItem('supabase_user_id');
 
