--- a/public/index.html
+++ b/public/index.html
@@ -111,8 +111,8 @@ body {
 
 		<script src="webgame.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"webgame","experimentalVK":false,"fileSizes":{"webgame.pck":31776,"webgame.wasm":1648449},"focusCanvas":true,"gdextensionLibs":[]};
-const GODOT_THREADS_ENABLED = true;
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"webgame","experimentalVK":false,"fileSizes":{"webgame.pck":55728,"webgame.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
